<resources>
    <string name="app_name">SNSwithAI</string>
    <!-- Add your missing string resource here -->
    <string name="generated_image_description">Generated image will appear here</string>
    <!-- You might have other strings here -->
    <string name="image_generation_hint">Enter a prompt to generate an image</string>
    <string name="generate_image_button_text">Generate Image</string>
    <string name="character_name_desc">캐릭터 이름</string>
    <string name="conversation_log_desc">대화 내용 로그</string>
    <string name="mic_button_desc">음성 입력 버튼</string>
    <string name="character_description_desc">캐릭터 설명</string>
    <string name="character_personality_desc">캐릭터 성격</string>
    <string name="character_image_desc">캐릭터 프로필 이미지</string>
    <string name="back_button_desc">뒤로가기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
